Stabilize security error handling tests and remove brittle context tests